# flibco-agentic-analytics

./: .env example  .gitignore  CLAUDE.md  README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
agents/flibco_analytics_agent/: README.md
agents/flibco_analytics_agent/setup/: rbac.sql
agents/flibco_analytics_agent/skills/revenue_at_risk/: SKILL.md
agents/flibco_analytics_agent/skills/route_report/: SKILL.md
analyses/: sample_questions.sql
docs/: agent-skills.md  dbt-in-snowflake.md  semantic-view-guidelines.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
models/marts/: _marts.yml  dim_date.sql  dim_delay_categories.sql  dim_routes.sql  dim_vehicles.sql  fct_punctuality.sql  fct_revenue.sql  fct_trips.sql
models/semantic/: _semantic.yml  flibco_operations_sv.sql  flibco_punctuality_sv.sql
models/staging/: _staging.yml  stg_bookings.sql  stg_delay_incidents.sql  stg_routes.sql  stg_scheduled_trips.sql  stg_trips.sql  stg_vehicles.sql
seeds/: raw_bookings.csv  raw_delay_incidents.csv  raw_routes.csv  raw_scheduled_trips.csv  raw_trips.csv  raw_vehicles.csv
streamlit/: README.md  operations_dashboard.py  punctuality_dashboard.py  requirements.txt
